Make sure the article illustrations are not too big

--- a/static/css/_article.scss
+++ b/static/css/_article.scss
@@ -1,6 +1,8 @@
 // Heading
 main header {
   position: relative;
+  max-height: 80vh;
+  overflow: hidden;
 
   & > div:not(.shadow) {
     position: absolute;
